--- a/index.html
+++ b/index.html
@@ -8,25 +8,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-<div>
-    <ul class="navbar">
-        <li>chirpus inc.</li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Contact</a></li>
+
+<div class="navbar">
+    <li class="navlogo">chirpus inc.</li>
+    <a class="links" href="#">Work</a>
+    <a class="links" href="#">About us</a>
+    <a class="links" href="#">Contact</a>
+    <div class="hirebutton">
         <button class="hire">Hire Us</button>
-    </ul>
+    </div>
 </div>
 
-
-    <div class="content">
+<div class="content">
+    <div class="text">
         <h2 class="header">chirpus inc.</h2>
-            <div class="border-left">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-        <div class="scroll">
-            <button>Scroll Down</button>
+        <div class="border-left">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div>
+    <div class="circles">
+        <span class="circle1"></span>
+        <span class="circle2"></span>
+        <span class="circle3"></span>
+    </div>
+</div>
+
+<div class="scroll">
+    <button class="scroll-button">Scroll Down</button>
+</div>
+
 </body>
 </html>
